--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/glenn-vhalado-86b37b1a0/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/tissuegalonn">Twitter</a>
-    <a class="footer-link" href="https://github.com/glennvhalado">Github</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/glenn-vhalado-86b37b1a0/" target="_blank">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/tissuegalonn" target="_blank">Twitter</a>
+    <a class="footer-link" href="https://github.com/glennvhalado" target="_blank">Github</a>
     <p class="copyright">© 2021 Glenn Vhalado // Made With ❤ at Jakarta.</p>
   </div>
 
